fix: GraphQL empty state header spacing

--- a/src/dashboard/Data/ApiConsole/ApiConsole.scss
+++ b/src/dashboard/Data/ApiConsole/ApiConsole.scss
@@ -35,7 +35,7 @@
 
 .empty {
   position: absolute;
-  top: 96px;
+  top: 48px;
   left: 0;
   right: 0;
   bottom: 0;
